# learning-wasm

./: Cargo.toml  README.MD
src/: io.rs  main.rs
src/elements/: export_entry.rs  func.rs  global_entry.rs  import_entry.rs  mod.rs  module.rs  ops.rs  primitives.rs  sections.rs  segment.rs  types.rs
src/tests/: mod.rs
