[package]
name = "learning-wasm"
version = "0.1.0"
authors = ["zhuyingjie <m6567fc@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["std"]
std = []

# Reduce stack usage for buffered read operations.
# This feature is useful when integrating on resource constrained devices such as microcontroler
# where the stack size is fixed (stacks do not grow) and limited to a few (k)bytes.
reduced-stack-buffer = []